@@ -7,15 +7,15 @@
 # \description{
 #  @get "title" returned by @see "stats::density".
 # }
-# 
-# @synopsis 
+#
+# @synopsis
 #
 # \arguments{
 #   \item{...}{Not used.}
 # }
 #
 # \value{
-#   Returns a 'density' object of the same class with 
+#   Returns a 'density' object of the same class with
 #   elements 'x' and 'y' swapped.
 # }
 #
@@ -27,7 +27,7 @@
 # }
 #
 # @keyword internal
-#*/########################################################################### 
+#*/###########################################################################
 setMethodS3("swapXY", "density", function(object, ...) {
   d <- object;
   d$x <- object$y;
@@ -46,8 +46,8 @@ setMethodS3("swapXY", "density", function(object, ...) {
 # \description{
 #  @get "title" along one of the sides of the current plotting region.
 # }
-# 
-# @synopsis 
+#
+# @synopsis
 #
 # \arguments{
 #  \item{side}{An @integer specifying which side to draw along.
@@ -74,9 +74,9 @@ setMethodS3("swapXY", "density", function(object, ...) {
 # }
 #
 # @keyword internal
-#*/########################################################################### 
+#*/###########################################################################
 # For some reason I cannot override lines() here
-setMethodS3("draw", "density", function(object, side=1, height=0.2, offset=0, scale=c("absolute", "relative"), xpd=TRUE, ...) {
+setMethodS3("draw", "density", function(object, side=1, height=0.2, offset=0, scale=c("absolute", "relative"), xtrim=NULL, xpd=TRUE, ...) {
   # To please R CMD check
 #  object <- x;
 
@@ -91,6 +91,9 @@ setMethodS3("draw", "density", function(object, side=1, height=0.2, offset=0, sc
 
   # Argument 'scale':
   scale <- match.arg(scale);
+
+  # Argument 'xtrim':
+  if (!is.null(xtrim)) xtrim <- Arguments$getDoubles(xtrim, length=c(2L,2L));
 
   # Argument 'xpd':
   xpd <- Arguments$getLogical(xpd);
@@ -118,7 +121,7 @@ setMethodS3("draw", "density", function(object, side=1, height=0.2, offset=0, sc
       height <- height * dx;
       offset <- offset * dx;
     }
-  }  
+  }
 
   # Rescale d$y to [0,height]
   d$y <- d$y * height;
@@ -126,7 +129,15 @@ setMethodS3("draw", "density", function(object, side=1, height=0.2, offset=0, sc
 
   # Offset
   d$y <- d$y + offset;
-  
+
+  # Truncate by 'x'?
+  if (!is.null(xtrim)) {
+    keep <- (xtrim[1] <= d$x & d$x < xtrim[2]);
+    d$x <- d$x[keep];
+    d$y <- d$y[keep];
+    keep <- NULL; # Not needed anymore
+  }
+
   # Direction, and (x,y) swap?
   if (side == 1) {
     d$y <- par[3] + d$y;
@@ -148,6 +159,8 @@ setMethodS3("draw", "density", function(object, side=1, height=0.2, offset=0, sc
 
 ###########################################################################
 # HISTORY:
+# 2014-04-26
+# o Added argument 'xtrim' to draw() for density object.
 # 2012-02-23
 # o Added Rdoc comments.
 # o Moved to R.utils from aroma.core.
