@@ -7,34 +7,34 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 
- \name{swapXY.density}
+\name{swapXY.density}
 \alias{swapXY.density}
 
- \title{Swaps x and y coordinates of a density object}
+\title{Swaps x and y coordinates of a density object}
 
- \description{
-  Swaps x and y coordinates of a density object returned by \code{\link[stats]{density}}.
- }
+\description{
+ Swaps x and y coordinates of a density object returned by \code{\link[stats]{density}}.
+}
 
- \usage{
+\usage{
 \method{swapXY}{density}(object, ...)
 }
 
- \arguments{
-   \item{...}{Not used.}
- }
+\arguments{
+  \item{...}{Not used.}
+}
 
- \value{
-   Returns a 'density' object of the same class with
-   elements 'x' and 'y' swapped.
- }
+\value{
+  Returns a 'density' object of the same class with
+  elements 'x' and 'y' swapped.
+}
 
- \author{Henrik Bengtsson}
+\author{Henrik Bengtsson}
 
- \seealso{
-   See \code{\link[stats]{density}} for estimating densities.
-   See \code{\link[R.utils:draw.density]{*draw}()} for plotting a density along one of the sides.
- }
+\seealso{
+  See \code{\link[stats]{density}} for estimating densities.
+  See \code{\link[R.utils:draw.density]{*draw}()} for plotting a density along one of the sides.
+}
 
 
 \keyword{methods}
